<resources>

    <string name="app_name">FitMe</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>

    <string-array name="menuPrueba">
        <item>Elemento 1</item>
        <item>Elemento 2</item>
    </string-array> 
 
    <string name="emailText">email</string>
    <string name="passwordText">Password</string>
    <string name="loginText">Login</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="usernameText">Username</string>
    <string name="createnewaccountText">Create New Account</string>
    <string name="title_activity_main_screen">MainScreenActivity</string>

    <string-array name="dropdownListMain">
        <item>Home</item>
        <item>Stats</item>
        <item>Options</item>
    </string-array>

    <string name="title_activity_options">OptionsActivity</string>
    <string name="title_activity_stats">StatsActivity</string>

    <string-array name="dropdownListStats">
        <item>Stats</item>
        <item>Home</item>
        <item>Options</item>
    </string-array>
    <string-array name="dropdownListOptions">
        <item>Options</item>
        <item>Home</item>
        <item>Stats</item>
    </string-array>

    <string name="optionStrapText">Strap</string>
    <string name="optionRunningUnits">Running Units</string>
    <string name="UserDetails">User Details</string>
    <string name="choose_avatar_text">Choose Avatar</string>
    <string name="durationText">DURATION</string>
    <string name="chronoText">00:00:00</string>
    <string name="totaldistanceText">Total Distance</string>
    <string name="speedText">Speed</string>
    <string name="bpmText">0 bpm</string>
    <string name="finishText">FINISH</string>
    <color name="textColor">#F2F2F2</color>
    <string name="totaldistancebeforestartingText">0.0 Mi</string>
    <string name="speedbeforestartingText">0.0 mph</string>
    <string name="saveChangesText">Save Changes</string>

</resources>
