<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#0c2512" >

        <!-- Header Starts -->

        <RelativeLayout
            android:id="@+id/headerRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingBottom="5dip"
            android:paddingTop="5dip" >
 
            <!-- Logo Start -->


            <!-- Logo Ends -->

            <ImageView
                android:layout_width="157dp"
                android:layout_height="157dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/logolog" />
        </RelativeLayout>

        <!-- Header Ends -->


        <!-- Register Form -->

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/headerRegister"
            android:orientation="vertical"
            android:padding="25dip" >
            
            <!-- Username Label -->

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:layout_marginTop="5dip"
                android:hint="@string/usernameText"
                android:singleLine="true" />

            <!-- Email Label -->

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:inputType="textEmailAddress"
                android:layout_marginTop="5dip"
                android:hint="@string/emailText"
                android:singleLine="true" />

            <!-- Password Label -->

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="15dip"
                android:hint="@string/passwordText"
                android:inputType="textPassword"
                android:singleLine="true" />
            <!-- Login button -->

            <Button
                android:id="@+id/btnRegisterRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/createnewaccountText" />
        </LinearLayout>
        <!-- Register Form Ends -->

    </RelativeLayout>

</ScrollView>