<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#0c2512" >

        <!-- Header Starts -->

        <RelativeLayout
            android:id="@+id/headerLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingBottom="5dip"
            android:paddingTop="5dip" >

            <!-- Logo Start -->

            <ImageView
                android:layout_width="157dp"
                android:layout_height="157dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/logolog" />

            <!-- Logo Ends -->

        </RelativeLayout>

        <!-- Header Ends -->


        <!-- Login Form -->

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/MiddleLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/headerLogin"
            android:orientation="vertical"
            android:paddingLeft="25dip"
            android:paddingRight="25dip"
            android:paddingTop="25dip" >

            <!-- Email Label -->

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:layout_marginTop="5dip"
                android:hint="@string/emailText"
                android:inputType="textEmailAddress"
                android:singleLine="true" />

            <!-- Password Label -->

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dip"
                android:layout_marginTop="5dip"
                android:hint="@string/passwordText"
                android:inputType="textPassword"
                android:singleLine="true" />
            <!-- Login button -->

            <Button
                android:id="@+id/btnLoginLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/loginText" />
        </LinearLayout>
        <!-- Login Form Ends -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:orientation="vertical"
            android:paddingLeft="25dip"
            android:paddingRight="25dip" >

            <Button
                android:id="@+id/btnRegisterLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/createnewaccountText" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>